--- a/css/style-new.css
+++ b/css/style-new.css
@@ -980,7 +980,7 @@ a.logo-subtext {
     margin-top: 20px;
     /* margin-left: 15px; */
     margin-left: 50px;
-    font-size: 16px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
@@ -1387,7 +1387,7 @@ a.r {
     color: #000;
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 16px;
+    line-height: normal;
     font-weight: bold;
     font-style: normal;
     text-decoration: none;
@@ -1806,7 +1806,7 @@ a.r {
         width: 1130px;
     }
     .navbar-default .navbar-brand {
-        padding: 20px 15px 10px 15px;
+        padding: 23px 15px 10px 15px;
     }
     /*Common*/
     .careers .main-content-wrap,
@@ -1854,7 +1854,7 @@ a.r {
         padding: 10px 0px;
     }
     .navbar-header {
-        margin-top: 10px;
+        margin-top: 13px;
     }
     .banner .banner-desc {
         padding-left: 10px;
@@ -2025,7 +2025,7 @@ a.r {
         font-size: 16px;
     }
     .navbar-header {
-        margin-top: 0px;
+        margin-top: 4px;
     }
     nav.navbar.navbar-default {
         height: 78px;
@@ -2074,7 +2074,7 @@ a.r {
     }
     .content {
         width: 100%;
-        padding: 0 15px;
+        padding: 0;
     }
     .main_text {
         min-height: auto;
@@ -2093,6 +2093,9 @@ a.r {
     .menu-nav {
         margin: 0;
     }
+    .container-all {
+        padding: 0 15px;
+    }
 }
 
 @media screen and (min-width:992px) {
@@ -2102,6 +2105,9 @@ a.r {
     }
     .menu-nav li {
         height: 100%;
+    }
+    .right-outer .row .col-md-4 {
+        width: 33.3%;
     }
 }
 
@@ -2123,12 +2129,12 @@ a.r {
 
 @media screen and (max-width: 768px) {
     .navbar-default .navbar-nav>li>a {
-        font-size: 16px;
+        /* font-size: 16px; */
         padding: 15px;
         /* line-height: 48px; */
     }
     .nav>li>a.social-icons {
-        font-size: 14px;
+        /* font-size: 14px; */
         padding: 15px 0px 15px 15px;
     }
     .navbar-default .navbar-collapse {
@@ -2143,7 +2149,7 @@ a.r {
         width: 100%;
     }
     .navbar-nav>li.social-links {
-        padding-left: 0px;
+        padding-left: 3px;
     }
     header {
         position: fixed;
@@ -2172,7 +2178,7 @@ a.r {
     }
     .navbar-default .navbar-collapse {
         background: rgba(0, 0, 0, 0.5);
-        width: 160px;
+        /* width: 160px; */
         text-align: center;
         position: absolute;
         right: -15px;
@@ -2218,6 +2224,7 @@ a.r {
     }
     .navbar-header {
         float: none;
+        margin-top: 0;
     }
     .navbar-brand {
         float: none;
@@ -2349,7 +2356,7 @@ a.r {
         /* padding: 19px 15px 20px 0px; */
     }
     .inner-pages .navbar-brand {
-        padding: 19px 15px 20px 0;
+        /* padding: 19px 15px 20px 0; */
     }
     .navbar-toggle {
         margin-top: 12px;
@@ -2381,9 +2388,9 @@ a.r {
         overflow-x: hidden;
     }
     .navbar-default .navbar-nav>li>a {
-        font-family: 'Poppins', sans-serif;
-        font-size: 14px;
-        font-weight: 600;
+        /* font-family: 'Poppins', sans-serif;
+        font-size: 14px; */
+        /* font-weight: 600; */
         letter-spacing: 1px;
         padding: 10px;
         /* line-height: 48px; */
@@ -2492,7 +2499,7 @@ a.r {
         font-size: 12px;
     }
     .navbar-default .navbar-collapse {
-        width: 160px;
+        /* width: 160px; */
     }
     .content {
         width: 100%;
@@ -2501,6 +2508,19 @@ a.r {
         /* margin-left: 100px; */
         margin-left: 145px;
     }
+    .markets-featured-desc {
+        margin: 0 0px 20px;
+    }
+    .right-outer {
+        padding: 0;
+        margin: 0 15px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    a.logo-subtext {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -2508,10 +2528,13 @@ a.r {
         display: none;
     }
     .menu-nav>li>a {
-        font-size: 14px;
+        font-size: 12px;
     }
     .menu-nav>li {
         width: 30%;
+    }
+    .menu-nav>li>ul {
+        padding: 5px;
     }
     .submenu-nav>li>a {
         font-size: 13px;
@@ -2673,7 +2696,7 @@ a.r {
         top: 63px;
     }
     .navbar-default .navbar-nav>li>a {
-        font-size: 16px;
+        /* font-size: 16px; */
     }
     /*banner*/
     .banner {
@@ -2750,6 +2773,9 @@ a.r {
         padding-left: 25px;
         padding-right: 25px;
     }
+    .header .col-md-12 {
+        padding-left: 5px;
+    }
     .navbar-brand {
         /* padding-left: 9px; */
     }
@@ -2775,8 +2801,11 @@ a.r {
         padding: 10px 5px;
     }
     .submenu-nav>li>a {
-        font-size: 13px;
-        padding: 5px;
+        font-size: 11px;
+        /* padding: 5px; */
+    }
+    .container-all {
+        padding: 0 5px;
     }
 }
 
@@ -2825,6 +2854,9 @@ a.r {
     }
     .pl-xs-grid {
         padding-left: 45px;
+    }
+    .banner-desc p br {
+        display: none;
     }
 }
 
