--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1521,13 +1521,15 @@ a.r {
 }
 
 .bg-img {
-    background-size: auto 100%;
     background-repeat: no-repeat;
+    /* background-size: auto 100%; */
     transition: 5s all linear;
+    transform: scale(1);
 }
 
 .banner .owl-item.active .bg-img {
-    background-size: auto 110%;
+    /* background-size: auto 110%; */
+    transform: scale(1.25);
 }
 
 .featured {
